# light-cnn-for-sound

./: .gitignore  README.md  pyproject.toml
artifacts/: best_model.pt  training_log.json
docs/: experiment_report.md  model_architecture.mmd
src/envsound/: __init__.py  config.py  data.py  demo.py  model.py  plot_logs.py  train.py
src/envsound.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
